fixed footer not displaying correctly on small screens

--- a/styling/main-style.css
+++ b/styling/main-style.css
@@ -2,12 +2,13 @@ body{
     background: #5f2c82;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #49a09d, #5f2c82);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #49a09d, #5f2c82); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 .card{
-    position: absolute;
-    bottom: -100%;
+    margin: auto;
     width: 100%;
-    height: auto;
 }
 
 .display-1{
